 * Added REALTIME_FIELD and REALTIME_HASH, which should aid users in better
   obtaining realtime data from the dialplan.
 * Added LOCAL_PEEK, which I have no idea how to use, but Leif Madsen wanted it.
   Russell says it's, like, a scope resolution function for LOCAL variables.
   Totally.  Hopefully, that means more to you than it does to me.

Applications
------------
 * Scheduled meetme conferences may now have their end times extended by
   using MeetMeAdmin.
 * app_authenticate now gives the ability to select a prompt other than
   the default.
 * app_directory now pays attention to the searchcontexts setting in
   voicemail.conf and will look through all contexts, if no context is
   specified in the initial argument.
 * A new application, Originate, has been introduced, that allows asynchronous
   call origination from the dialplan.

Miscellaneous
-------------
 * The Asterisk CLI has a new command, "channel redirect", which is similar in
   operation to the AMI Redirect action.
 * res_jabber: autoprune has been disabled by default, to avoid misconfiguration 
   that would end up being interpreted as a bug once Asterisk started removing 
   the contacts from a user list.
 * extensions.conf now allows you to use keyword "same" to define an extension
   without actually specifying an extension.  It uses exactly the same pattern
   as previously used on the last "exten" line.  For example:
     exten => 123,1,NoOp(something)
     same  =>     n,SomethingElse()
 * musiconhold.conf classes of type 'files' can now use relative directory paths,
   which are interpreted as relative to the astvarlibdir setting in asterisk.conf.
 * All deprecated CLI commands are removed from the sourcecode. They are now handled
   by the new clialiases module. See cli_aliases.conf.sample file.
 * Times within timespecs are now accurate down to the minute.  This is a change
   from historical Asterisk, which only provided timespecs rounded to the nearest